# PushQuantumSP

./: .env  .gitignore  README.md  benchmark.md  example_cplex_generator.py  example_cplex_glb.py  example_qubo_generator.py  example_qubo_glb.py  flake.nix  lunaBench.py  lunaBenchmark.py  lunaBenchmarkCustom.py  lunaBenchmarkGenerated.py  lunaHelper.py  lunaSolve.py  pyproject.toml  requirements.txt
data/: glb_reader_small.py  sp_data.py  sp_data_rework.py
evaluation/: evaluation.py
input/: qubo_00.json  qubo_glb.json  qubo_v1c10.json  qubo_v1c20.json  qubo_v1c3.json  qubo_v1c5.json  qubo_v2c10.json  qubo_v2c20.json  qubo_v2c3.json  qubo_v2c5.json  qubo_v3c10.json  qubo_v3c20.json  qubo_v3c3.json  qubo_v3c5.json
models/: __init__.py  qubo_problem.py  sp_cplex.py
output/: Plotting.py  PlottingBenchmark.py  PlottingBox.py  PlottingTest.py  QAGA+_v1c10.json  QAGA+_v1c3.json  QAGA+_v2c10.json  QAGA+_v2c20.json  QAGA+_v2c3.json  QAGA+_v3c10.json  QAGA+_v3c3.json  QAGA+_v3c5.json  QA_glb.json  QA_v2c20.json  QA_v3c10.json  SAGA+_v2c20.json
output/firstRun/: QAGA+_glb.json  QAGA+_v1c20.json  QAGA+_v1c3.json  QAGA+_v1c5.json  QAGA+_v2c5.json  QA_v1c10.json  QA_v1c20.json  QA_v1c3.json  QA_v1c5.json  QA_v2c10.json  QA_v3c20.json  SAGA+_glb.json
output/test/: 2024-11-30_16-14-47_solution.json  2024-11-30_19-41-12_solution.json  MySolution.json
plotting/: sp_plot.py  sp_plot_rework.py
presentation/: Quark Presentation.pptx
submission/: lunaSolve.py  solution.ipynb  solution.py
