[project]
name = "pushquantumsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cplex>=20.1",
    "docplex>=2.23",
    "dwave-ocean-sdk>=5.0",
    "matplotlib>=3.5",
    "pygltflib>=1.16",
    "qiskit-optimization>=0.5",
    "matplotlib>=3.0.0",
    "luna-quantum>=0.0.33",
    "python-dotenv>=1.0.0",
    "networkx>=3.4.2",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["uv>=0.4.20", "setuptools>=75", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
submission = ["*"]

[tool.aqora]
type = "submission"
competition = "aqarios-pushquantum-24"

[tool.aqora.refs]
solution = { path = "submission.solution", notebook = true }

[dependency-groups]
dev = [
    "aqora-cli>=0.9.0",
]
